--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   dio: ^5.7.0
   flutter_local_notifications: ^17.2.4
   open_file: ^3.5.9
-  firebase_core: ^3.6.0
-  firebase_messaging: ^15.1.3
+  # firebase_core: ^3.6.0
+  # firebase_messaging: ^15.1.3
   flutter_otp_text_field: ^1.2.0
   flutter_launcher_icons: ^0.14.1
   intl: ^0.17.0
