--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_otp_text_field: ^1.2.0
   flutter_launcher_icons: ^0.14.1
   intl: ^0.17.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
