--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,11 +1,18 @@
-# يمكنك تحديد نسخة iOS المستهدفة هنا
+# تحديد نسخة iOS المستهدفة
 platform :ios, '13.0'
 
-# ignore_all_warnings!  # يمكنك استخدام هذا السطر لتجاهل التحذيرات إذا كنت تواجه تحذيرات كثيرة
+# لتجاهل التحذيرات إذا كانت هناك الكثير من التحذيرات
+# ignore_all_warnings!  
 
 # إعداد المكتبات (Pods) الخاصة بمشروعك
 target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # إضافة مكتبة firebase_core (أساسية لربط Firebase بالتطبيق)
+  pod 'Firebase/Core', '~> 10.0'  # يمكنك تحديد النسخة المطلوبة هنا
+  
+  # إضافة مكتبة firebase_messaging (لإرسال واستقبال الإشعارات)
+  pod 'Firebase/Messaging', '~> 10.0'  # يمكنك تحديد النسخة المطلوبة هنا
+  
 end
