--- a/ios/podfile
+++ b/ios/podfile
@@ -1,28 +1,22 @@
 # This is the Podfile for a Flutter application.
-platform :ios, '11.0'
+platform :ios, '13.0'
 
 # Specify the path to your Flutter SDK here
 flutter_application_path = '../'
 
-# Load Flutter's configuration for iOS dependencies
-load File.join(flutter_application_path, '.flutter-plugins-dependencies')
+# Enable the use of frameworks for iOS
+use_frameworks!
+use_modular_headers!
 
-# The target is typically the name of your app, e.g., Runner for a default Flutter project
 target 'Runner' do
-  # Enable the use of frameworks for iOS
-  use_frameworks!
-  use_modular_headers!
-
-  # Install Flutter-specific iOS Pods
-  flutter_pods(flutter_application_path)
+  # Flutter-specific iOS Pod installation (automatic configuration)
+  pod 'Flutter', :path => flutter_application_path + '/packages/flutter'
 
   # Post-installation step to configure iOS build settings
   post_install do |installer|
     installer.pods_project.targets.each do |target|
+      # Apply necessary build settings for iOS
       flutter_additional_ios_build_settings(target)
     end
   end
 end
-
-# Ensure that the Podfile uses the latest Flutter settings
-# This includes any Flutter-specific hooks for adding iOS build settings
