--- a/ios/podfile
+++ b/ios/podfile
@@ -2,7 +2,7 @@
 platform :ios, '13.0'
 
 # Specify the path to your Flutter SDK here
-flutter_application_path = '../'
+# flutter_application_path = '../'
 
 # Enable the use of frameworks for iOS
 use_frameworks!
@@ -10,7 +10,7 @@ use_modular_headers!
 
 target 'Runner' do
   # Flutter-specific iOS Pod installation (automatic configuration)
-  pod 'Flutter', :path => flutter_application_path + '/packages/flutter'
+#   pod 'Flutter', :path => flutter_application_path + '/packages/flutter'
 
   # Post-installation step to configure iOS build settings
   post_install do |installer|
