--- a/ios/podfile
+++ b/ios/podfile
@@ -1,5 +1,11 @@
 # This is the Podfile for a Flutter application.
 platform :ios, '13.0'
 
+# This is required for Flutter integration.
+flutter_application_path = '../'
+load File.join(flutter_application_path, '.ios', 'Flutter', 'podhelper.rb')
 
+target 'Runner' do
+  # Install Flutter dependencies
+  install_all_flutter_pods(flutter_application_path)
 end
