--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,3 @@
-# Podfile
-
 # Define the iOS platform version
 platform :ios, '13.0'
 
@@ -21,6 +19,12 @@ target 'Runner' do
   pod 'shared_preferences_foundation', :path => File.join(flutter_application_path, '.symlinks/plugins/shared_preferences_foundation/darwin')
   pod 'path_provider_foundation', :path => File.join(flutter_application_path, '.symlinks/plugins/path_provider_foundation/darwin')
   pod 'url_launcher_ios', :path => File.join(flutter_application_path, '.symlinks/plugins/url_launcher_ios/ios')
+  
+  # Add new plugins here
+  pod 'AwesomeDialog', :path => File.join(flutter_application_path, '.symlinks/plugins/awesome_dialog/ios')
+  pod 'OpenFile', :path => File.join(flutter_application_path, '.symlinks/plugins/open_file/ios')
+  pod 'FlutterOtpTextField', :path => File.join(flutter_application_path, '.symlinks/plugins/flutter_otp_text_field/ios')
+
   # Add other plugins as needed
 end
 
